# avent_of_code2024

./: .gitignore  pyproject.toml  ruff.toml
aoc/: __init__.py  __main__.py  cli.py
aoc/day1/: __init__.py  cli.py  load_lists.py  value_counts.py
aoc/day2/: __init__.py  analyze_report.py  cli.py  load_reports.py
aoc/day3/: cli.py  load_data.py
aoc/day4/: cli.py  load_wordsearch.py  wordsearch.py
aoc/day5/: cli.py  load_data.py
aoc/day6/: cli.py  guard.py  load_data.py  traverse.py
